# locor

./: README.md  config.py  description.md  environment.yml  pyproject.toml  testing.ipynb  testing.py  testing_2.ipynb
src/locor/: __main__.py  affine_transformation.py  bounding_box.py  config_parameters.py  default_config.py  feature_extractor.py  gaussian_sampler.py  local_least_squares_error.py  registration.py  regularization.py  symmetric_deformation_model.py  transformation_modules.py  transformation_parameters.py
